# personaregistryapi

./: .gitignore  README.md  message.txt  pyproject.toml
app/: db.py  main.py  models.py  reload_trigger.py  schemas.py  store.py
docs/: book-to-persona-sop.md  design-decision-template.md  design-discovery-questions.md  index.html  persona-registry-design-spec.md  sherlock-holmes-personas.json  sprint-ticket-plan.md  v1-implementation-backlog.md
persona_registry_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: prepare_github_pages.py  reload_server.cmd  reload_server.py  seed_personas_from_message.py  start_server.cmd  start_tunnel.py
tests/: test_personas.py
web/: index.html  standalone.html
